[project]
name = "mlc-llm-kg-encryption"
version = "0.1.0"
description = "Knowledge Graph Encryption with MLC LLM"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
        "graphqlite>=0.3.5",
        "tqdm>=4.67.3",
        "questionary>=2.1.1",
        "ipykernel>=7.2.0",
        "dotenv>=0.9.9",
        "trl>=0.29.0",
]



